working on project spec and skeleton

--- a/spec/defines.tex
+++ b/spec/defines.tex
@@ -3,26 +3,26 @@
 
 \newcommand{\dueDateTime}{7:00 PM}
 
-\newcommand{\labFiveDueDate}{Friday, October 14}
-\newcommand{\labSixDueDate}{Friday, October 21}
+\newcommand{\labFiveDueDate}{Wednesday, March 8}
+\newcommand{\labSixDueDate}{Wednesday, March 15}
 
 \newcommand{\blockDiagramTaskName}{Checkpoint 0.5}
-\newcommand{\blockDiagramDueDate}{Friday, October 28}
+\newcommand{\blockDiagramDueDate}{Wednesday, March 15}
 \newcommand{\blockDiagramTimeAlloted}{1 week}
 
 \newcommand{\baseCPUTaskName}{Checkpoint 1}
-\newcommand{\baseCPUDueDate}{Friday, November 11}
+\newcommand{\baseCPUDueDate}{Wednesday, April 5}
 \newcommand{\baseCPUTimeAlloted}{3 weeks}
 
 \newcommand{\audioTaskName}{Checkpoint 2}
-\newcommand{\audioDueDate}{Friday, December 2}
-\newcommand{\audioTimeAlloted}{2 weeks}
+\newcommand{\audioDueDate}{Wednesday, April 12}
+\newcommand{\audioTimeAlloted}{1 week}
 
 \newcommand{\ethernetTaskName}{Checkpoint 3}
-\newcommand{\ethernetDueDate}{Friday, December 2}
-\newcommand{\ethernetTimeAlloted}{1 week}
+\newcommand{\ethernetDueDate}{Wednesday, April 26}
+\newcommand{\ethernetTimeAlloted}{2 weeks}
 
-\newcommand{\finalCheckoffDueDate}{Friday, December 9}
+\newcommand{\finalCheckoffDueDate}{Friday, May 5}
 
 \newcommand{\skeletonRepoName}{sp17_project_skeleton}
 \newcommand{\semesterName}{sp17}
