minor fix on spec

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -169,7 +169,7 @@ Here are some commands to add a modules from a previous lab to your git reposito
 	git push
 \end{minted}
 
-The \verb|git add| command tells your local git repository to add the file \verb|UATransmit.v| to the list of tracked files or stage it for the next commit. The \verb|git commit| command tells your local repository to actually commit any of the files you added and create a new change set with the changes in the files you added. Finally the \verb|git push| command sends your new local commit to the remote repository so that you or your partner can pull it later.
+The \verb|git add| command tells your local git repository to add the file \verb|ac97_controller.v| to the list of tracked files or stage it for the next commit. The \verb|git commit| command tells your local repository to actually commit any of the files you added and create a new change set with the changes in the files you added. Finally the \verb|git push| command sends your new local commit to the remote repository so that you or your partner can pull it later.
 
 Going forward, any update to project files will be made through the \verb|sp17_project_skeleton| repository. If you have followed the setup described here, then you can just do a \verb|git pull staff master|, and the latest changes will be fetched and automatically merged in.
 
