modified spec with new deadlines

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -1337,7 +1337,7 @@ You will then need to create another async FIFO instance, but this time with the
 	\end{center}
 \end{table}
 
-To finish this section, you will have to write a small C program (very similar to \verb|echo|)that will fetch samples from the AC97 mic FIFO and push the same samples into the AC97 headphone (audio out) FIFO. The program should do this continuously. You should be able to plug in a mic and a pair of headphones and listen to the mic input through your headphones.
+To finish this section, you will have to write a small C program (very similar to \verb|echo|) that will fetch samples from the AC97 mic FIFO and push the same samples into the AC97 headphone (audio out) FIFO. The program should do this continuously. You should be able to plug in a mic and a pair of headphones and listen to the mic input through your headphones.
 
 \subsection{Checkpoint 2 Deliverables Summary}
 
@@ -1346,7 +1346,7 @@ To finish this section, you will have to write a small C program (very similar t
 		\toprule
 		\textbf{Deliverable} & \textbf{Due Date} & \textbf{Description} \\
 		\midrule
-		User I/O + FIFOs + AC97 Controller & \audioDueDate & Demonstrate the working user IO test program and the music streamer program. Explain your testing methodology for the FIFOs and any system level integration testbenches you created. Demonstrate the piano program. \textbf{EECS251A only}: demonstrate mic input to headphone output program. \\
+		User I/O + FIFOs + AC97 Controller & \audioDueDate - Checkoff time in the evening TBA & Demonstrate the working user IO test program and the music streamer program. Explain your testing methodology for the FIFOs and any system level integration testbenches you created. Demonstrate the piano program. \textbf{EECS251A only}: demonstrate mic input to headphone output program. \\
 		\bottomrule
 	\end{tabular}
 \end{center}
@@ -1558,7 +1558,7 @@ Not included in the above tabulations are point assignments for extra credit as 
 		\midrule
 		3: Video/Graphics & In-Lab Checkoff &  \ethernetDueDate \space @ \dueDateTime\\
 		\midrule
-		Final Checkoff, Extra Credit, &    In-lab Checkoff        & \finalCheckoffDueDate \space @ \dueDateTime \\
+		Final Checkoff, Extra Credit, &    In-lab Checkoff        & \finalCheckoffDueDate \space @ 2-5pm (by appointment) \\
 		and Optimizations             & Github code submission    & \\
 		\midrule
 		Final Report                  &   bCourses submission     & \finalCheckoffDueDate \space @ 11:59pm\\
