minor due date fixes

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -1554,11 +1554,11 @@ Not included in the above tabulations are point assignments for extra credit as 
 		1: RISCV151 Processor & Design Review &  \blockDiagramDueDate \space @ \dueDateTime\\
 		 & In-Lab Checkoff & \baseCPUDueDate \space @ \dueDateTime \\
 		\midrule
-		2: IO, FIFOs, AC97 Controller & In-Lab Checkoff & Friday, November 25\\
+		2: IO, FIFOs, AC97 Controller & In-Lab Checkoff & \audioDueDate \space @ \dueDateTime \\
 		\midrule
 		3: Video/Graphics & In-Lab Checkoff &  \ethernetDueDate \space @ \dueDateTime\\
 		\midrule
-		Final Checkoff, Extra Credit, &    In-lab Checkoff        & \finalCheckoffDueDate \space @ 2-5pm (by appointment) \\
+		Final Checkoff, Extra Credit, &    In-lab Checkoff        & \finalCheckoffDueDate \space @ 3:30-5:30pm (by appointment) \\
 		and Optimizations             & Github code submission    & \\
 		\midrule
 		Final Report                  &   bCourses submission     & \finalCheckoffDueDate \space @ 11:59pm\\
