--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -1346,7 +1346,7 @@ To finish this section, you will have to write a small C program (very similar t
 		\toprule
 		\textbf{Deliverable} & \textbf{Due Date} & \textbf{Description} \\
 		\midrule
-		User I/O + FIFOs + AC97 Controller & \audioDueDate - Checkoff time in the evening TBA & Demonstrate the working user IO test program and the music streamer program. Explain your testing methodology for the FIFOs and any system level integration testbenches you created. Demonstrate the piano program. \textbf{EECS251A only}: demonstrate mic input to headphone output program. \\
+		User I/O + FIFOs + AC97 Controller & \audioDueDate \space - In lab checkoff & Demonstrate the working user IO test program and the music streamer program. Explain your testing methodology for the FIFOs and any system level integration testbenches you created. Demonstrate the piano program. \textbf{EECS251A only}: demonstrate mic input to headphone output program. \\
 		\bottomrule
 	\end{tabular}
 \end{center}
